--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <p>Working with git is so easy!</p>
 </div>
 
-
-
+<h2>Author: Zekeo Audain</h2>
+<div>
 <p>Taking a look at commit shas!</p>
-</div>
 
-<comment>
+</div>
