--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 </div>
 
 <h2>Author: Zekeo Audain</h2>
+
 <div>
 <p>Taking a look at commit shas!</p>
-
 </div>
+
+ <div>
+   <p>Added from Github!</p> 
+ </div> 
+ 
