Edited the index.html

--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
-<h1>Hello Git World!</h1>
+<!DOCTYPE html>
+<html>
+    <body>
+        <h1>Hello Git World!</h1>
 
-<div>
-<p>Working with git is so easy!</p>
-</div>
+        <div>
+        <p>Working with git is so easy!</p>
+        </div>
 
-<h2>Author: Zekeo Audain</h2>
+        <h2>Author: Zekeo Audain</h2>
 
-<div>
-<p>Taking a look at commit shas!</p>
-</div>
+        <div>
+        <p>Taking a look at commit shas!</p>
+        </div>
 
- <div>
-   <p>Added from Github!</p> 
- </div> 
+        <div>
+        <p>Added from Github!</p> 
+        </div> 
  
+    </body>
+ </html>  
