--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <body>
-        <h1>Hello Git World!</h1>
+        <div class="Container">
+            <h1>Hello Git World!</h1>
 
-        <div>
-        <p>Working with git is so easy!</p>
-        </div>
+            <div>
+            <p>Working with git is so easy!</p>
+            </div>
 
-        <h2>Author: Zekeo Audain</h2>
+            <h2>Author: Zekeo Audain</h2>
 
-        <div>
-        <p>Taking a look at commit shas!</p>
-        </div>
+            <div>
+            <p>Taking a look at commit shas!</p>
+         </div>
 
-        <div>
-        <p>Added from Github!</p> 
-        </div> 
+            <div>
+            <p>Added from Github!</p> 
+            </div> 
 
-        <div>
-        <p>This is important!</p> 
-        </div> 
-        
+            <div>
+            <p>This is important!</p> 
+            </div> 
+            </div>
     </body>
  </html>  
